; ModuleID = '/home/carl/AnghaBench/linux/net/ipv6/extr_route.c_rt6_set_from.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv6/extr_route.c_rt6_set_from.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rt6_info = type { i32, i32, i32 }
%struct.fib6_info = type { i32 }

@RTF_EXPIRES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rt6_info*, %struct.fib6_info*)* @rt6_set_from to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rt6_set_from(%struct.rt6_info* %0, %struct.fib6_info* %1) #0 {
  %3 = alloca %struct.rt6_info*, align 8
  %4 = alloca %struct.fib6_info*, align 8
  store %struct.rt6_info* %0, %struct.rt6_info** %3, align 8
  store %struct.fib6_info* %1, %struct.fib6_info** %4, align 8
  %5 = load i32, i32* @RTF_EXPIRES, align 4
  %6 = xor i32 %5, -1
  %7 = load %struct.rt6_info*, %struct.rt6_info** %3, align 8
  %8 = getelementptr inbounds %struct.rt6_info, %struct.rt6_info* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 4
  %10 = and i32 %9, %6
  store i32 %10, i32* %8, align 4
  %11 = load %struct.rt6_info*, %struct.rt6_info** %3, align 8
  %12 = getelementptr inbounds %struct.rt6_info, %struct.rt6_info* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.fib6_info*, %struct.fib6_info** %4, align 8
  %15 = call i32 @rcu_assign_pointer(i32 %13, %struct.fib6_info* %14)
  %16 = load %struct.rt6_info*, %struct.rt6_info** %3, align 8
  %17 = getelementptr inbounds %struct.rt6_info, %struct.rt6_info* %16, i32 0, i32 0
  %18 = load %struct.fib6_info*, %struct.fib6_info** %4, align 8
  %19 = getelementptr inbounds %struct.fib6_info, %struct.fib6_info* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @ip_dst_init_metrics(i32* %17, i32 %20)
  ret void
}

declare dso_local i32 @rcu_assign_pointer(i32, %struct.fib6_info*) #1

declare dso_local i32 @ip_dst_init_metrics(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
